# mathend_apps

./: AGENT.md  AGENTS.md  README.md  notes.md  package.json  to-do-today.md  to-do.md  tsconfig.json  ui-in-html.html  vitest.config.ts
.github/workflows/: desktop-release.yml  test.yml
apps/desktop/: .env.example  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql
apps/desktop/src-tauri/src/: lib.rs  license.rs  main.rs
apps/docs/app/: page.tsx
apps/mathend/: README.md  package.json
apps/mathend/app/: globals.css  layout.tsx  page.tsx
apps/web/: .env.example  README.md
apps/web/app/: globals.css  layout.tsx  page.tsx  (+1 more)
docs/: architecture.md  conventions.md  env.md  glossary.md  repo-map.md  runbook.md  testing.md
test/: README.md  package.json  setup.ts  vitest.config.ts
test/docs/: page.test.tsx  web-download-runtime.test.ts  web-gumroad-license.test.ts  web-lemonsqueezy-license.test.ts  web-license-session.test.ts
test/mathend/: agent-copilot-token.test.ts  agent-provider-chat-runtime.test.ts  export-modal.test.tsx  gumroad-license.test.ts  lemonsqueezy-license.test.ts  license-session.test.ts  math-command-map.test.ts  math-content.test.ts  oauth-provider-runtime.test.ts  page.test.tsx  palette-position.test.ts  typst-source.test.ts
test/mocks/: lucide-react.tsx
(+57 files in other folders)
