[package]
name = "mathend-desktop"
version = "0.1.0"
description = "Mathend desktop app"
authors = ["mathend"]
edition = "2021"

[lib]
name = "mathend_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
